# SHIELD

./: README.md  pyproject.toml
palisade_he_cnn/: test.py
palisade_he_cnn/src/: cnn_context.py  small_model.py  small_model_inference.py
